fix: update asset paths and fix collapse toggle button transparency

--- a/css/main.scss
+++ b/css/main.scss
@@ -189,6 +189,7 @@ a {
   }
 
   .collapse-toggle {
+    background-color: transparent;
     display: inline-flex !important;
     justify-content: center;
     align-items: center;
